# typeshift

./: .gitignore  README.md  pyproject.toml
typeshift/: streamlit_app.py  talk1.py  talk2.py  talk3.py  talk4.py  talk5.py  words.py
